# SSVUtils

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.5e4d6ab  README.md  SSVUtils.h  SSVUtils.mk  SSVUtils.project  SSVUtils.txt  formatAll.sh
FileSystem/: FileSystem.cpp
Log/: Log.cpp  Log.h
MemoryManager/: MemoryManager.h
MemoryManager/Traits/: Traits.h
Timeline/: Command.cpp  Command.h  Do.cpp  Do.h  Go.cpp  Go.h  Timeline.cpp  Timeline.h  TimelineManager.cpp  TimelineManager.h  Wait.cpp  Wait.h
Utils/: Utils.cpp  Utils.h  UtilsCollections.cpp  UtilsCollections.h  UtilsMath.cpp  UtilsMath.h  UtilsString.cpp  UtilsString.h
cmake/Modules/: FindSSVUtils.cmake
cmake/modules/: FindSSVUtils.cmake
doc/: Doxyfile
extra/: compile.sh  ssvpp_generator.cpp
include/SSVUtils/: SSVUtils.h  SSVUtils.hpp
include/SSVUtils/Assert/: Assert.hpp
include/SSVUtils/Benchmark/: Benchmark.hpp
include/SSVUtils/Bimap/: Bimap.h  Bimap.hpp
include/SSVUtils/CmdLine/: Cmd.hpp  CmdLine.hpp  Ctx.hpp  Ctx.inl  Parser.hpp
include/SSVUtils/CommandLine/: Cmd.h  Cmd.hpp  CmdLine.h  CmdLine.hpp  CmdLine.inl  CommandLine.h  CommandLine.hpp  Parser.h  Parser.hpp
include/SSVUtils/Container/: Container.hpp  VecMap.hpp  VecSorted.hpp
include/SSVUtils/Core/: Core.hpp
include/SSVUtils/Delegate/: Delegate.h  Delegate.hpp  FastFunc.h
include/SSVUtils/Easing/: Easing.hpp
include/SSVUtils/Encoding/: Encoding.hpp
include/SSVUtils/Encryption/: Base64.h  Encryption.h  Encryption.hpp  MD5.h  ObfuscatedValue.h  ObfuscatedValue.hpp
include/SSVUtils/FastFunc/: FastFunc.hpp
include/SSVUtils/FatEnum/: FatEnum.hpp
include/SSVUtils/FileSystem/: Enums.h  Enums.hpp  FileSystem.h  FileSystem.hpp  FileSystemUtils.h  Path.h  Path.hpp  Scan.h  Scan.hpp  Utils.h  Utils.hpp
include/SSVUtils/Global/: Common.hpp  Typedefs.h  Typedefs.hpp
include/SSVUtils/GrowableArray/: GrowableArray.hpp
include/SSVUtils/HandleVector/: Handle.hpp  Handle.inl  HandleVector.hpp
include/SSVUtils/Internal/: API.hpp  SharedFuncs.hpp
include/SSVUtils/Json/: Json.hpp
include/SSVUtils/Log/: Log.h  Log.hpp  Log.inl
include/SSVUtils/MemoryManager/: MemoryManager.h  MemoryManager.hpp  MemoryManager2.h
include/SSVUtils/PreAlloc/: PreAlloc.h  PreAlloc.hpp
include/SSVUtils/Preallocator/: Preallocator.h
include/SSVUtils/Preprocessor/: ArgCount.hpp  Bool.hpp  Cat.hpp  Concat.hpp  ForEach.hpp  ForEachIdx.hpp  Preprocessor.hpp  StringifyWithCommas.hpp  ToStrSep.hpp  Tuple.hpp  Utils.hpp  VarArgsCount.hpp
include/SSVUtils/Range/: Range.hpp
include/SSVUtils/RecPtr/: RecPtr.hpp
include/SSVUtils/String/: Enums.h  Enums.hpp  Split.h  Split.hpp  String.h  String.hpp  Stringifier.hpp  Trim.hpp  Utils.h  Utils.hpp
include/SSVUtils/TemplateSystem/: Dictionary.h  Dictionary.hpp  TemplateSystem.h  TemplateSystem.hpp
include/SSVUtils/Test/: Test.h  Test.hpp  Tests.h  Tests.hpp
include/SSVUtils/Tests/: Tests.hpp  TestsBenchmark.hpp  TestsBimap.hpp  TestsContainer.hpp  TestsDelegate.hpp  TestsEncryption.hpp  TestsFatEnum.hpp  TestsGrowableArray.hpp  TestsHandleManager.hpp  TestsJson.hpp  TestsMacros.hpp  TestsMakeArray.hpp  TestsMemoryManager.hpp  TestsObfuscatedValue.hpp  TestsPath.hpp  TestsPreprocessor.hpp  TestsRange.hpp  TestsStringSplit.hpp  TestsStringUtils.hpp  TestsStringifier.hpp  TestsTemplateSystem.hpp  TestsUnionVariant.hpp  TestsUtilsContainer.hpp  TestsUtilsForArgs.hpp  TestsUtilsMath.hpp  TestsUtilsTuple.hpp
include/SSVUtils/Ticker/: Ticker.h  Ticker.hpp
include/SSVUtils/Timeline/: Command.h  Command.hpp  Do.h  Do.hpp  Go.h  Go.hpp  Timeline.h  Timeline.hpp  TimelineManager.h  TimelineManager.hpp  Wait.h  Wait.hpp
include/SSVUtils/Tokenizer/: Tokenizer.h
include/SSVUtils/Union/: Union.hpp
include/SSVUtils/UnionVariant/: UnionVariant.hpp
include/SSVUtils/Utils/: Classes.hpp  Console.hpp  Containers.hpp  Macros.hpp  MakeUnique.hpp  Math.hpp  Tuple.hpp  Utils.h  Utils.hpp  UtilsClasses.h  UtilsCollections.h  UtilsConsole.hpp  UtilsContainers.h  UtilsContainers.hpp  UtilsIterator.hpp  UtilsMacros.h  UtilsMacros.hpp  UtilsMakeUnique.h  UtilsMakeUnique.hpp  UtilsMath.h  UtilsMath.hpp  UtilsString.h  UtilsTuple.h  UtilsTuple.hpp
src/SSVUtils/CommandLine/: Cmd.cpp  CmdLine.cpp
src/SSVUtils/Encryption/: Base64.cpp  Encryption.cpp  MD5.cpp
src/SSVUtils/FileSystem/: FileSystem.cpp  FileSystemUtils.cpp  Utils.cpp
test/: Benchmark.cpp  Bimap.cpp  CMakeLists.txt  Container.cpp  Delegate.cpp  Encoding.cpp  Encryption.cpp  FatEnum.cpp  GrowableArray.cpp  HandleManager.cpp  HandleManager_0.cpp  HandleManager_1.cpp  HandleManager_2.cpp  HandleManager_3.cpp  HandleManager_4.cpp  Json.cpp  MPL.cpp  Macros.cpp  MakeArray.cpp  MemoryManager.cpp  ObfuscatedValue.cpp  Path.cpp  Range.cpp  StringSplit.cpp  StringUtils.cpp  Stringifier.cpp  TemplateSystem.cpp  Union.cpp  UtilsContainer.cpp  UtilsFnTraits.cpp  UtilsForArgs.cpp  UtilsMath.cpp  UtilsTuple.cpp
test/basic/: should_pass.cpp
test/utils/: test_utils.hpp
(+306 files in other folders)
